@@ -82,6 +82,8 @@ Current:
         is enabled AND target has a very slow clock
       - bug #39893: Verification failure with AVRISPmkII and Xmega
       - bug #38713: Compilation of the documentation breaks with texinfo-5
+      - bug #38023: avrdude doesn't return an error code when attempting
+        to upload an invalid Intel HEX file
 
   * Keep track of input file contents
 
